--- a/3_Attention/Attention!-Solutions.ipynb
+++ b/3_Attention/Attention!-Solutions.ipynb
@@ -503,7 +503,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Python\\Python37\\lib\\site-packages\\torch\\nn\\modules\\rnn.py:51: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.5 and num_layers=1\n",
+      "/usr/local/lib/python3.7/site-packages/torch/nn/modules/rnn.py:50: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.5 and num_layers=1\n",
       "  \"num_layers={}\".format(dropout, num_layers))\n"
      ]
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,15 +750,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Could not import signal.SIGPIPE (this is expected on Windows machines)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sacrebleu\n",
     "\n",
@@ -829,21 +821,115 @@
       "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
       "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
       "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "Batch:\t 0 / 227,\t loss: 8.686\n",
+      "DEC_OUTPUT torch.Size([128])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT torch.Size([128])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT torch.Size([128])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
+      "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
       "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
       "DEC_OUTPUT RNN torch.Size([128, 5893])\n",
       "DEC_OUTPUT RNN torch.Size([128, 5893])\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'writer' is not defined",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-b42e904cbb35>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mEPOCH\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Start training Epoch {}:'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mtrain_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_iterator\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mCLIP\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[0mvalid_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalid_iterator\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mbleu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_bleu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalid_iterator\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTRG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-14-83335d55abbd>\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(model, iterator, optimizer, criterion, grad_clip, num_epoch)\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m         writer.add_scalar('training loss',\n\u001b[0m\u001b[0;32m     23\u001b[0m                             \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m                             num_epoch * len(iterator) + i)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'writer' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-b42e904cbb35>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEPOCH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Start training Epoch {}:'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mtrain_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCLIP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mvalid_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mbleu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_bleu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTRG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-83335d55abbd>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, iterator, optimizer, criterion, grad_clip, num_epoch)\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Batch:\\t {0} / {1},\\t loss: {2:2.3f}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m         \u001b[0;31m# clip grad to avoid gradient explosion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_clip\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    193\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m         \"\"\"\n\u001b[0;32m--> 195\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    196\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -889,12 +975,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.470438615060996\n"
+     ]
+    }
+   ],
    "source": [
     "model.load_state_dict(torch.load('checkpoint_best-seq2seq.pt', map_location=torch.device(device)))\n",
-    "print(test_bleu(model, test_iterator, TRG))"
+    "print(test_bleu(model, test_iterator, TRG))\n",
+    "# aiming for 100, so this score is pretty bad"
    ]
   },
   {
@@ -907,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,9 +1034,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a man in a orange hat is cutting . .']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "translate(model, 'ein mann mit einem orangefarbenen hut, der etwas anstarrt.', SRC, TRG)"
    ]
@@ -1501,7 +1607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
