--- a/4_TransformerAndBert/Transformers-Solutions.ipynb
+++ b/4_TransformerAndBert/Transformers-Solutions.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "![whole_transformer](images/transformer.png)\n",
     "\n",
-    "The Transformer is comprised of a stack of encoders and a stack of decoders. The output from the final layer of the encoder stack is sent to the decoder. The input to the first encoder is done via a special embedding module. We will look at the decoder and the embedding module later on.\n",
+    "The Transformer is comprised of a stack of encoders and a stack of decoders. The output from the final layer of the encoder stack is sent to the decoder. The input to the first encoder is done via a special embedding module. We will look at the decoder and the embedding module in a future session.\n",
     "\n",
     "![transformer_high_level](images/transformer_high_level.png)\n",
     "\n",
@@ -126,15 +126,6 @@
     "![encoder_multihead](images/encoder_multihead.png)\n",
     "\n",
     "![vector_attn_score](images/vector_attn_scores.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Andrea: Arrow coming out of v and k are the same number as the number of scores, which correspond to the number of input features.\n",
-    "q=query, k=key, v=value.  \n",
-    "Lower case w is word embeddings, capital W's are learnt weights."
    ]
   },
   {
@@ -1676,7 +1667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
