--- a/4_TransformerAndBert/Transformers.ipynb
+++ b/4_TransformerAndBert/Transformers.ipynb
@@ -193,23 +193,45 @@
     "\n",
     "- For the FIRST encoder, Q, K, V are determined by the embeddings of the input words\n",
     "- For the rest of the encoder stack, Q, K, V are determined by the output of the previous encoder\n",
-    "- For the decoder stack, Q is determined in a similar fashion to the encoders. K and V, however, are passed from the final encoder to each of the decoders in the decoder stack."
+    "- (slightly wrong): For the decoder stack, Q is determined in a similar fashion to the encoders. K and V, however, are passed from the final encoder to each of the decoders in the decoder stack."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# encodings = torch.Tensor([[[0.0, 0.1, 0.2, 0.3], [1.0, 1.1, 1.2, 1.3], [2.0, 2.1, 2.2, 2.3]]]) # (1, 3, 4)\n",
-    "# Q_layer = nn.Linear(4, 3)\n",
-    "# K_layer = nn.Linear(4, 3)\n",
-    "# V_layer = nn.Linear(4, 3)\n",
+    "encodings = torch.Tensor([[[0.0, 0.1, 0.2, 0.3], [1.0, 1.1, 1.2, 1.3], [2.0, 2.1, 2.2, 2.3]]]) # (1, 3, 4)\n",
+    "Q_layer = nn.Linear(4, 3)\n",
+    "K_layer = nn.Linear(4, 3)\n",
+    "V_layer = nn.Linear(4, 3)\n",
     "\n",
-    "# Q = Q_layer(encodings)\n",
-    "# K = K_layer(encodings)\n",
-    "# V = V_layer(encodings)"
+    "Q = Q_layer(encodings)\n",
+    "K = K_layer(encodings)\n",
+    "V = V_layer(encodings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.0371,  0.1118,  0.4371],\n",
+       "         [-1.5653,  0.1668,  0.2449],\n",
+       "         [-3.1678,  0.2217,  0.0526]]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q"
    ]
   },
   {
