--- a/4_TransformerAndBert/Transformers_v2_Andrea.ipynb
+++ b/4_TransformerAndBert/Transformers_v2_Andrea.ipynb
@@ -193,7 +193,7 @@
     "\n",
     "- For the FIRST encoder, Q, K, V are determined by the embeddings of the input words\n",
     "- For the rest of the encoder stack, Q, K, V are determined by the output of the previous encoder\n",
-    "- For the decoder stack, Q is determined in a similar fashion to the encoders. K and V, however, are passed from the final encoder to each of the decoders in the decoder stack."
+    "- (slithgly wrong) For the decoder stack, Q is determined in a similar fashion to the encoders. K and V, however, are passed from the final encoder to each of the decoders in the decoder stack."
    ]
   },
   {
