--- a/4_TransformerAndBert/Transformers.ipynb
+++ b/4_TransformerAndBert/Transformers.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "![whole_transformer](images/transformer.png)\n",
     "\n",
-    "The Transformer is comprised of a stack of encoders and a stack of decoders. The output from the final layer of the encoder stack is sent to the decoder. The input to the first encoder is done via a special embedding module. We will look at the decoder and the embedding module later on.\n",
+    "The Transformer is comprised of a stack of encoders and a stack of decoders. The output from the final layer of the encoder stack is sent to the decoder. The input to the first encoder is done via a special embedding module. We will look at the decoder and the embedding module in a future session.\n",
     "\n",
     "![transformer_high_level](images/transformer_high_level.png)\n",
     "\n",
@@ -126,15 +126,6 @@
     "![encoder_multihead](images/encoder_multihead.png)\n",
     "\n",
     "![vector_attn_score](images/vector_attn_scores.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Andrea: Arrow coming out of v and k are the same number as the number of scores, which correspond to the number of input features.\n",
-    "q=query, k=key, v=value.  \n",
-    "Lower case w is word embeddings, capital W's are learnt weights."
    ]
   },
   {
@@ -193,45 +184,23 @@
     "\n",
     "- For the FIRST encoder, Q, K, V are determined by the embeddings of the input words\n",
     "- For the rest of the encoder stack, Q, K, V are determined by the output of the previous encoder\n",
-    "- (slightly wrong): For the decoder stack, Q is determined in a similar fashion to the encoders. K and V, however, are passed from the final encoder to each of the decoders in the decoder stack."
+    "- For the decoder stack, Q is determined in a similar fashion to the encoders. K and V, however, are passed from the final encoder to each of the decoders in the decoder stack."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "encodings = torch.Tensor([[[0.0, 0.1, 0.2, 0.3], [1.0, 1.1, 1.2, 1.3], [2.0, 2.1, 2.2, 2.3]]]) # (1, 3, 4)\n",
-    "Q_layer = nn.Linear(4, 3)\n",
-    "K_layer = nn.Linear(4, 3)\n",
-    "V_layer = nn.Linear(4, 3)\n",
+    "# encodings = torch.Tensor([[[0.0, 0.1, 0.2, 0.3], [1.0, 1.1, 1.2, 1.3], [2.0, 2.1, 2.2, 2.3]]]) # (1, 3, 4)\n",
+    "# Q_layer = nn.Linear(4, 3)\n",
+    "# K_layer = nn.Linear(4, 3)\n",
+    "# V_layer = nn.Linear(4, 3)\n",
     "\n",
-    "Q = Q_layer(encodings)\n",
-    "K = K_layer(encodings)\n",
-    "V = V_layer(encodings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 0.0371,  0.1118,  0.4371],\n",
-       "         [-1.5653,  0.1668,  0.2449],\n",
-       "         [-3.1678,  0.2217,  0.0526]]], grad_fn=<AddBackward0>)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Q"
+    "# Q = Q_layer(encodings)\n",
+    "# K = K_layer(encodings)\n",
+    "# V = V_layer(encodings)"
    ]
   },
   {
@@ -241,11 +210,15 @@
    "outputs": [],
    "source": [
     "def scaled_dot_product_attention(Q, K, V, dk=3):\n",
-    "    Q_K_matmul = torch.matmul(Q, K.T)\n",
-    "    matmul_scaled = Q_K_matmul/math.sqrt(dk)\n",
+    "    ##matmul Q and K\n",
+    "    Q_K_matmul =\n",
+    "    ##scale Q_K_matmul by the sqrt of dk\n",
+    "    matmul_scaled =\n",
+    "    \n",
     "    attention_weights = F.softmax(matmul_scaled, dim=-1)\n",
     "\n",
-    "    output = torch.matmul(attention_weights, V)\n",
+    "    ## matmul attention_weights by V\n",
+    "    output =\n",
     "\n",
     "    return output, attention_weights"
    ]
@@ -419,9 +392,10 @@
     "\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
+    "        ##create a list of layers for K, and a list of layers for V\n",
     "        self.linear_Qs = [nn.Linear(d_model, self.d).to(device) for _ in range(num_heads)]\n",
-    "        self.linear_Ks = [nn.Linear(d_model, self.d).to(device) for _ in range(num_heads)]\n",
-    "        self.linear_Vs = [nn.Linear(d_model, self.d).to(device) for _ in range(num_heads)]\n",
+    "        self.linear_Ks = \n",
+    "        self.linear_Vs =\n",
     "\n",
     "        self.mha_linear = nn.Linear(d_model, d_model)\n",
     "\n",
@@ -444,9 +418,10 @@
     "    def forward(self, pre_q, pre_k, pre_v):\n",
     "        # shape(pre_q, pre_k, pre_v) = [B x seq_len x D]\n",
     "\n",
+    "        ##Implement k and v\n",
     "        Q = [linear_Q(pre_q) for linear_Q in self.linear_Qs]\n",
-    "        K = [linear_K(pre_k) for linear_K in self.linear_Ks]\n",
-    "        V = [linear_V(pre_v) for linear_V in self.linear_Vs]\n",
+    "        K = \n",
+    "        V = \n",
     "        # shape(Q, K, V) = [B x seq_len x D/num_heads] * num_heads\n",
     "\n",
     "        output_per_head = []\n",
@@ -454,8 +429,9 @@
     "        # shape(output_per_head) = [B x seq_len x D/num_heads] * num_heads\n",
     "        # shape(attn_weights_per_head) = [B x seq_len x seq_len] * num_heads\n",
     "        for Q_, K_, V_ in zip(Q, K, V):\n",
-    "            output, attn_weight = self.scaled_dot_product_attention(\n",
-    "                Q_, K_, V_)\n",
+    "            \n",
+    "            ##run scaled_dot_product_attention\n",
+    "            output, attn_weight = \n",
     "            # shape(output_per_head) = [B x seq_len x D/num_heads]\n",
     "            # shape(attn_weights_per_head) = [B x seq_len x seq_len]\n",
     "            output_per_head.append(output)\n",
@@ -702,11 +678,9 @@
     "    def __init__(self, d_model=hp[\"D_MODEL\"], d_ff=hp[\"D_FF\"], dropout=hp[\"P_DROP\"]):\n",
     "        super().__init__()\n",
     "\n",
+    "        ##Implement the formula above (hint: what activation function is max(0, x)?)\n",
     "        self.ff = nn.Sequential(\n",
-    "            nn.Linear(d_model, d_ff),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Dropout(dropout),\n",
-    "            nn.Linear(d_ff, d_model)\n",
+    "        ##\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -762,22 +736,28 @@
     "class EncoderLayer(nn.Module):\n",
     "    def __init__(self, d_model=hp[\"D_MODEL\"], num_heads=hp[\"HEADS\"], d_ff=hp[\"D_FF\"], dropout=hp[\"P_DROP\"]):\n",
     "        super().__init__()\n",
-    "        self.norm_1 = Norm(d_model)\n",
-    "        self.norm_2 = Norm(d_model)\n",
-    "        self.mha = MultiHeadAttention(d_model, num_heads)\n",
-    "        self.ff = PWFFN(d_model, d_ff)\n",
+    "        \n",
+    "        ## initalize these\n",
+    "        self.norm_1 = \n",
+    "        self.norm_2 = \n",
+    "        self.mha = \n",
+    "        self.ff =\n",
     "\n",
     "    def forward(self, x, mask):\n",
     "        # shape(x) = [B x seq_len x D]\n",
     "\n",
-    "        mha, encoder_attention_weights = self.mha(x, x, x, mask)\n",
-    "        norm1 = self.norm_1(x + mha)\n",
+    "        ##call MHA\n",
+    "        mha, encoder_attention_weights =\n",
+    "        \n",
+    "        ##call norm_1 WITH a residual connection\n",
+    "        norm1 = \n",
     "        # shape(mha) = [B x seq_len x D]\n",
     "        # shape(encoder_attention_weights) = [B x num_heads x seq_len x seq_len]\n",
     "        # shape(norm1) = [B x seq_len x D]\n",
     "\n",
-    "        ff = self.ff(norm1)\n",
-    "        norm2 = self.norm_2(norm1 + ff)\n",
+    "        ##fill below\n",
+    "        ff = \n",
+    "        norm2 =\n",
     "        # shape(ff) = [B x seq_len x D]\n",
     "        # shape(norm2) = [B x seq_len x D]\n",
     "\n",
@@ -1251,36 +1231,39 @@
     "class DecoderLayer(nn.Module):\n",
     "    def __init__(self, d_model=hp[\"D_MODEL\"], num_heads=hp[\"HEADS\"], d_ff=hp[\"D_FF\"], dropout=hp[\"P_DROP\"]):\n",
     "        super().__init__()\n",
-    "        self.norm_1 = Norm(d_model)\n",
-    "        self.norm_2 = Norm(d_model)\n",
-    "        self.norm_3 = Norm(d_model)\n",
+    "        self.norm_1 =\n",
+    "        self.norm_2 =\n",
+    "        self.norm_3 =\n",
     "\n",
-    "        self.mha_1 = MultiHeadAttention(d_model, num_heads)\n",
-    "        self.mha_2 = MultiHeadAttention(d_model, num_heads)\n",
-    "        self.ff = PWFFN(d_model, d_ff)\n",
+    "        self.mha_1 = \n",
+    "        self.mha_2 = \n",
+    "        self.ff = \n",
     "\n",
     "    def forward(self, x, encoder_outputs, trg_mask, src_mask):\n",
     "        # shape(x) = [B x TRG_seq_len x D]\n",
     "        # shape(encoder_outputs) = [B x SRC_seq_len x D]\n",
     "\n",
-    "        masked_mha, masked_mha_attn_weights = self.mha_1(\n",
-    "            x, x, x, mask=trg_mask)\n",
+    "        ##call mha_1. Remember to pass in a mask...\n",
+    "        masked_mha, masked_mha_attn_weights = \n",
     "        # shape(masked_mha) = [B x TRG_seq_len x D]\n",
     "        # shape(masked_mha_attn_weights) = [B x num_heads x TRG_seq_len x TRG_seq_len]\n",
     "\n",
-    "        norm1 = self.norm_1(x + masked_mha)\n",
+    "        ## norm_1?\n",
+    "        norm1 =\n",
     "        # shape(norm1) = [B x TRG_seq_len x D]\n",
     "\n",
-    "        enc_dec_mha, enc_dec_mha_attn_weights = self.mha_2(\n",
-    "            norm1, encoder_outputs, encoder_outputs, mask=src_mask)\n",
+    "        ##call mha_2\n",
+    "        enc_dec_mha, enc_dec_mha_attn_weights =\n",
     "        # shape(enc_dec_mha) = [B x TRG_seq_len x D]\n",
     "        # shape(enc_dec_mha_attn_weights) = [B x num_heads x TRG_seq_len x SRC_seq_len]\n",
     "\n",
-    "        norm2 = self.norm_2(norm1 + enc_dec_mha)\n",
+    "        ##norm_2?\n",
+    "        norm2 =\n",
     "        # shape(norm2) = [B x TRG_seq_len x D]\n",
     "\n",
-    "        ff = self.ff(norm2)\n",
-    "        norm3 = self.norm_3(norm2 + ff)\n",
+    "        ##fill below\n",
+    "        ff =\n",
+    "        norm3 =\n",
     "        # shape(ff) = [B x TRG_seq_len x D]\n",
     "        # shape(norm3) = [B x TRG_seq_len x D]\n",
     "\n",
@@ -1313,24 +1296,24 @@
     "        self.PE = PositionalEncoding(\n",
     "            d_model)\n",
     "\n",
-    "        self.decoders = nn.ModuleList([DecoderLayer(\n",
-    "            d_model,\n",
-    "            num_heads,\n",
-    "            d_ff,\n",
-    "            dropout\n",
-    "        ) for layer in range(num_layers)])\n",
-    "\n",
+    "        ##create a stack of DecoderLayesr\n",
+    "        self.decoders = \n",
+    "        \n",
     "    def forward(self, x, encoder_output, trg_mask, src_mask):\n",
     "        # shape(x) = [B x TRG_seq_len]\n",
     "\n",
-    "        embeddings = self.Embedding(x)\n",
-    "        encoding = self.PE(embeddings)\n",
+    "        ##embed the inputs\n",
+    "        embeddings =\n",
+    "        ##encode the inputs\n",
+    "        encoding =\n",
     "        # shape(embeddings) = [B x TRG_seq_len x D]\n",
     "        # shape(encoding) = [B x TRG_seq_len x D]\n",
     "        \n",
-    "        for decoder in self.decoders:\n",
-    "            encoding, masked_mha_attn_weights, enc_dec_mha_attn_weights = decoder(\n",
-    "                encoding, encoder_output, trg_mask, src_mask)\n",
+    "        ##loop over the decoder stack\n",
+    "        for _ in _:\n",
+    "            ##call the decoder\n",
+    "            \n",
+    "            encoding, masked_mha_attn_weights, enc_dec_mha_attn_weights =\n",
     "            # shape(encoding) = [B x TRG_seq_len x D]\n",
     "            # shape(masked_mha_attn_weights) = [B x num_heads x TRG_seq_len x TRG_seq_len]\n",
     "            # shape(enc_dec_mha_attn_weights) = [B x num_heads x TRG_seq_len x SRC_seq_len]\n",
@@ -1698,7 +1681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
