updating Transformer lesson

--- a/4_TransformerAndBert/Transformers-Solutions.ipynb
+++ b/4_TransformerAndBert/Transformers-Solutions.ipynb
@@ -1428,6 +1428,7 @@
     "    optimizer = torch.optim.Adam(\n",
     "        model.parameters(), lr=hp.LR, betas=(0.9, 0.98), eps=1e-9)\n",
     "    criterion = nnCrossEntropyLoss(ignore_index=TRG.vocab.stoi[\"<pad>\"])\n",
+    "    ## we only want to learn everything up to input sequence, so no need to learn on the <pad> tokens that appear after that.\n",
     "\n",
     "    for epoch in tqdm(range(hp[\"EPOCHS\"])):\n",
     "\n",
@@ -1534,7 +1535,7 @@
     "\n",
     "        for t in range(max_seq_len-1):\n",
     "            predictions, _, _, _ = transformer(input_sequence, preds)\n",
-    "            predicted_id = predictions[:, -1:, :].argmax(-1)\n",
+    "            predicted_id = predictions[:, -1:, :].argmax(-1)  \n",
     "            preds = torch.cat((preds, predicted_id), dim=-1)\n",
     "\n",
     "        outputs[seq_id] = preds\n",
@@ -1667,7 +1668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
