--- a/4_TransformerAndBert/Transformers.ipynb
+++ b/4_TransformerAndBert/Transformers.ipynb
@@ -189,43 +189,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# encodings = torch.Tensor([[[0.0, 0.1, 0.2, 0.3], [1.0, 1.1, 1.2, 1.3], [2.0, 2.1, 2.2, 2.3]]]) # (1, 3, 4)\n",
-    "# Q_layer = nn.Linear(4, 3)\n",
-    "# K_layer = nn.Linear(4, 3)\n",
-    "# V_layer = nn.Linear(4, 3)\n",
+    "encodings = torch.Tensor([[[0.0, 0.1, 0.2, 0.3], [1.0, 1.1, 1.2, 1.3], [2.0, 2.1, 2.2, 2.3]]]) # (1, 3, 4)\n",
+    "Q_layer = nn.Linear(4, 3)\n",
+    "K_layer = nn.Linear(4, 3)\n",
+    "V_layer = nn.Linear(4, 3)\n",
     "\n",
-    "# Q = Q_layer(encodings)\n",
-    "# K = K_layer(encodings)\n",
-    "# V = V_layer(encodings)"
+    "Q = Q_layer(encodings)\n",
+    "K = K_layer(encodings)\n",
+    "V = V_layer(encodings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scaled_dot_product_attention(Q, K, V, dk=3):\n",
     "    ##matmul Q and K\n",
-    "    Q_K_matmul =\n",
+    "    Q_K_matmul = torch.matmul(Q, K.T)\n",
     "    ##scale Q_K_matmul by the sqrt of dk\n",
-    "    matmul_scaled =\n",
+    "    matmul_scaled = Q_K_matmul/m.sqrt(dk)\n",
     "    \n",
     "    attention_weights = F.softmax(matmul_scaled, dim=-1)\n",
     "\n",
     "    ## matmul attention_weights by V\n",
-    "    output =\n",
+    "    output = torch.matmul(attention_weights, V)\n",
     "\n",
     "    return output, attention_weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,24 +241,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_k = torch.Tensor([[10,0,0],\n",
-    "                      [0,10,0],\n",
-    "                      [0,0,10],\n",
-    "                      [0,0,10]])  # (4, 3)\n",
+    "# random examples of key and value matrices\n",
     "\n",
-    "temp_v = torch.Tensor([[   1,0, 1],\n",
-    "                      [  10,0, 2],\n",
-    "                      [ 100,5, 0],\n",
-    "                      [1000,6, 0]])  # (4, 3)"
+    "temp_k = torch.Tensor([[10,0,0],  # some representation for w1\n",
+    "                      [0,10,0],  # some representation for w2\n",
+    "                      [0,0,10],  # some representation for w3\n",
+    "                      [0,0,10]])  # some representation for w4 # (4, 3)\n",
+    "\n",
+    "temp_v = torch.Tensor([[   1,0, 1],  # some representation for w1\n",
+    "                      [  10,0, 2],  # some representation for w2\n",
+    "                      [ 100,5, 0],  # some representation for w3\n",
+    "                      [1000,6, 0]])  # some representation for w4 # (4, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -376,12 +378,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MultiHeadAttention(nn.Module):\n",
-    "    def __init__(self, d_model=hp[\"D_MODEL\"], num_heads=hp[\"HEADS\"], dropout=0.1):\n",
+    "class MultiHeadAttention_Encoder(nn.Module):\n",
+    "    def __init__(self, d_model=hp[\"D_MODEL\"], num_heads=hp[\"HEADS\"], dropout=hp[\"P_DROP\"]):\n",
     "        super().__init__()\n",
     "\n",
     "        # d_q, d_k, d_v\n",
@@ -394,8 +396,8 @@
     "\n",
     "        ##create a list of layers for K, and a list of layers for V\n",
     "        self.linear_Qs = [nn.Linear(d_model, self.d).to(device) for _ in range(num_heads)]\n",
-    "        self.linear_Ks = \n",
-    "        self.linear_Vs =\n",
+    "        self.linear_Ks = [nn.Linear(d_model, self.d).to(device) for _ in range(num_heads)]\n",
+    "        self.linear_Vs = [nn.Linear(d_model, self.d).to(device) for _ in range(num_heads)]\n",
     "\n",
     "        self.mha_linear = nn.Linear(d_model, d_model)\n",
     "\n",
@@ -420,8 +422,8 @@
     "\n",
     "        ##Implement k and v\n",
     "        Q = [linear_Q(pre_q) for linear_Q in self.linear_Qs]\n",
-    "        K = \n",
-    "        V = \n",
+    "        K = [linear_K(pre_k) for linear_K in self.linear_Ks]\n",
+    "        V = [linear_V(pre_v) for linear_V in self.linear_Vs]\n",
     "        # shape(Q, K, V) = [B x seq_len x D/num_heads] * num_heads\n",
     "\n",
     "        output_per_head = []\n",
@@ -431,7 +433,7 @@
     "        for Q_, K_, V_ in zip(Q, K, V):\n",
     "            \n",
     "            ##run scaled_dot_product_attention\n",
-    "            output, attn_weight = \n",
+    "            output, attn_weight = self.scaled_dot_product_attention(Q_, K_, V_)\n",
     "            # shape(output_per_head) = [B x seq_len x D/num_heads]\n",
     "            # shape(attn_weights_per_head) = [B x seq_len x seq_len]\n",
     "            output_per_head.append(output)\n",
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +464,7 @@
     }
    ],
    "source": [
-    "toy_encodings = torch.Tensor([[[0.0, 0.1, 0.2, 0.3], [1.0, 1.1, 1.2, 1.3], [2.0, 2.1, 2.2, 2.3]]]) \n",
+    "toy_encodings = torch.Tensor([[[0.0, 0.1, 0.2, 0.3], [1.0, 1.1, 1.2, 1.3], [2.0, 2.1, 2.2, 2.3]]]) # seq_len=3, D=4, 1 batch\n",
     "# shape(toy_encodings) = [B, T, D] = (1, 3, 4)\n",
     "print(\"Toy Encodings:\\n\", toy_encodings)\n",
     "\n",
@@ -471,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -479,11 +481,12 @@
      "output_type": "stream",
      "text": [
       "Toy MHA: \n",
-      " tensor([[[ 0.4249, -0.4863,  0.2636,  0.7792],\n",
-      "         [ 0.4515, -0.4947,  0.2841,  0.8008],\n",
-      "         [ 0.4782, -0.5032,  0.3046,  0.8226]]], grad_fn=<AddBackward0>)\n",
+      " tensor([[[ 0.3164,  0.6799, -0.9124, -0.9544],\n",
+      "         [ 0.3643,  0.7887, -1.0046, -1.2028],\n",
+      "         [ 0.2649,  0.8768, -1.0704, -1.3874]]], grad_fn=<AddBackward0>)\n",
       "Toy MHA Shape: \n",
-      " torch.Size([1, 3, 4])\n"
+      " torch.Size([1, 3, 4]) \n",
+      " same shape as toy_encodings as we can see!\n"
      ]
     }
    ],
@@ -491,7 +494,7 @@
     "toy_MHA_layer = MultiHeadAttention_Encoder(d_model=D_MODEL, num_heads=2)\n",
     "toy_MHA, _ = toy_MHA_layer(toy_encodings, toy_encodings, toy_encodings)\n",
     "print(\"Toy MHA: \\n\", toy_MHA)\n",
-    "print(\"Toy MHA Shape: \\n\", toy_MHA.shape)"
+    "print(\"Toy MHA Shape: \\n\", toy_MHA.shape, \"\\n same shape as toy_encodings as we can see!\")"
    ]
   },
   {
@@ -666,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +683,10 @@
     "\n",
     "        ##Implement the formula above (hint: what activation function is max(0, x)?)\n",
     "        self.ff = nn.Sequential(\n",
-    "        ##\n",
+    "            nn.Linear(d_model, d_ff),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(dropout),\n",
+    "            nn.Linear(d_ff, d_model),\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -694,19 +700,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Toy PWFFN: \n",
-      " tensor([[[-0.2890, -0.2307,  0.3671, -0.0121],\n",
-      "         [ 0.1957, -0.4772,  0.3291,  0.3521],\n",
-      "         [ 0.2405, -0.5672,  0.2820,  0.3192]]], grad_fn=<AddBackward0>)\n",
-      "Toy PWFFN Shape: \n",
-      " torch.Size([1, 3, 4])\n"
+     "ename": "NameError",
+     "evalue": "name 'toy_norm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-24ef82cba60c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtoy_PWFFN_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPWFFN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mD_MODEL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md_ff\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mD_MODEL\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtoy_PWFFN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtoy_PWFFN_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoy_norm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Toy PWFFN: \\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_PWFFN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Toy PWFFN Shape: \\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_PWFFN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'toy_norm' is not defined"
      ]
     }
    ],
@@ -789,7 +794,9 @@
     "$$PE_{(pos,2i)}=sin\\left(\\frac{pos}{10000^{\\frac{2i}{d_{model}}}}\\right)$$\n",
     "$$PE_{(pos,2i+1)}=cos\\left(\\frac{pos}{10000^{\\frac{2i}{d_{model}}}}\\right)$$\n",
     "\n",
-    "![PE_pseudo](pe.png)\n",
+    "![PE_pseudo](images/pe.png)\n",
+    "\n",
+    "Andrea's note from lesson: The image above is wrong, in the second pe it should be pe[i+1] = PE_cos\n",
     "\n",
     "![postional_encoding_graph](https://d33wubrfki0l68.cloudfront.net/ef81ee3018af6ab6f23769031f8961afcdd67c68/3358f/img/transformer_architecture_positional_encoding/positional_encoding.png)"
    ]
@@ -1001,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,14 +1016,14 @@
     "    # since this mask is the same for a batch being fed into the model,\n",
     "    # we will the mask Tensor with the batch size = 1.\n",
     "    # Broadcasting will allow us to replicate this mask across all the other elements in the batch\n",
-    "    mask = torch.ones((1, size, size)).triu(1)\n",
+    "    mask = torch.ones((1, size, size)).triu(1)  # refers to upper diagonal of a tensor/matrix\n",
     "    mask = mask == 0\n",
     "    return(mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1044,14 +1051,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOY SCORES:  tensor([[[ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9],\n",
+      "TOY SCORES: \n",
+      " tensor([[[ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9],\n",
       "         [10, 11, 12, 13, 14, 15, 16, 17, 18, 19],\n",
       "         [20, 21, 22, 23, 24, 25, 26, 27, 28, 29],\n",
       "         [30, 31, 32, 33, 34, 35, 36, 37, 38, 39],\n",
@@ -1098,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1116,13 +1124,13 @@
        "         [90, 91, 92, 93, 94, 95, 96, 97, 98, 99]]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "toy_scores = toy_scores.masked_fill(toy_mask == 0, -1)\n",
+    "toy_scores = toy_scores.masked_fill(toy_mask == 0, -1)  # -1 is easier to visualise, but could be -1e9\n",
     "toy_scores"
    ]
   },
@@ -1342,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1375,7 @@
     "\n",
     "        for p in self.parameters():\n",
     "            if p.dim() > 1:\n",
-    "                nn.init.xavier_uniform_(p)\n",
+    "                nn.init.xavier_uniform_(p)  # this is a way to initialise the weights\n",
     "\n",
     "    def create_src_mask(self, src):\n",
     "        src_mask = (src != SRC.vocab.stoi[\"<pad>\"]).unsqueeze(-2)\n",
@@ -1548,7 +1556,7 @@
     "\n",
     "        for t in range(max_seq_len-1):\n",
     "            predictions, _, _, _ = transformer(input_sequence, preds)\n",
-    "            predicted_id = predictions[:, -1:, :].argmax(-1)\n",
+    "            predicted_id = predictions[:, -1:, :].argmax(-1) # batch, seq_length, target_vocabulary_size\n",
     "            preds = torch.cat((preds, predicted_id), dim=-1)\n",
     "\n",
     "        outputs[seq_id] = preds\n",
@@ -1681,7 +1689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
